@@ -16,7 +16,7 @@ AC_ISC_POSIX
 AC_HEADER_STDC
 AM_PROG_LIBTOOL
 
-GSTREAMER_REQUIRED=0.10.0
+GSTREAMER_REQUIRED=0.10.11
 GTK_REQUIRED=2.6
 MONO_REQUIRED=1.0
 GTKSHARP_REQUIRED=1.9.2
